--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -60,5 +60,65 @@
   "your_account": "귀하의 계정：",
   "copy": "복사",
   "copied": "복사됨",
-  "copy_success": "복사 성공"
+  "copy_success": "복사 성공",
+  "input_search_hint": "검색 키워드를 입력해주세요",
+  "settings": "설정",
+  "account_login": "계정 및 로그인",
+  "notification_setting": "알림 설정",
+  "payment_management": "결제 방법 관리",
+  "customer_support": "고객 지원",
+  "account_info": "계정 정보 확인/변경",
+  "third_party_login": "제3자 로그인",
+  "change_password": "비밀번호 변경",
+  "logout": "로그아웃",
+  "exit_member": "회원 탈퇴",
+   "avatar": "아바타",
+  "account_name": "계정 이름",
+  "nickname": "별명",
+  "gender": "성별",
+  "birth_date": "생년월일",
+  "please_login": "먼저 로그인해 주세요",
+  "load_failed": "사용자 정보를 가져오지 못했습니다",
+  "male": "남성",
+  "female": "여성",
+  "secret": "비공개",
+  "please_fill": "입력해 주세요",
+    "password_change": "비밀번호 변경",
+  "old_password": "기존 비밀번호",
+  "input_old_pwd": "기존 비밀번호를 입력해 주세요",
+  "input_new_pwd": "새 비밀번호를 입력해 주세요",
+  "input_confirm_pwd": "새 비밀번호를 다시 입력해 주세요",
+  "old_pwd_empty": "기존 비밀번호는 비워둘 수 없습니다",
+  "new_pwd_empty": "새 비밀번호는 비워둘 수 없습니다",
+  "pwd_not_match": "두 비밀번호가 일치하지 않습니다",
+  "pwd_update_success": "비밀번호가 성공적으로 변경되었습니다",
+  "pwd_update_failed": "비밀번호 변경에 실패했습니다",
+  "update": "변경",
+   "select_gender": "성별 선택",
+  "select_birthday": "생년월일 선택",
+  "gender_updated": "성별이 업데이트되었습니다",
+  "birthday_updated": "생일이 업데이트되었습니다",
+  "save_failed": "저장 실패",
+  "logout_success": "로그아웃 성공",
+  "logout_failed": "로그아웃 실패",
+  "edit_nickname": "별명 수정",
+  "enter_nickname": "별명을 입력하세요",
+  "nickname_not_empty": "별명은 비어 있을 수 없습니다",
+  "select_image_source": "이미지 출처 선택",  
+  "image_source_gallery": "앨범",           
+  "image_source_camera": "카메라",            
+  "image_pick_fail": "이미지 선택 실패，다시 시도해 주세요",
+  "image_upload_fail": "이미지 업로드 실패：%s", 
+  "image_search_fail": "이미지 검색 실패：%s",
+  "image_search_success": "%s개 관련 상품을 찾았습니다", 
+  "filter_prefix": "필터：",                 
+  "all_products": "전체 상품",                
+  "sort_sales": "판매량↑",                    
+  "sort_rating": "별점↑",                     
+  "sort_price": "가격↑",                     
+  "no_product_data": "상품 데이터가 없습니다", 
+  "load_data_fail": "로드 실패：%s",
+  "stock":"재고",
+  "Reviews":"평가",
+  "ProductDetails":"상품 상세정보"    
 }
