--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -14,6 +14,7 @@
   "email": "邮箱",
   "verify_code": "验证码",
   "username": "用户名",
+  "name": "名字",
   "birthday": "生日",
   "phone": "手机号",
   "confirm_password": "确认密码",
@@ -54,11 +55,257 @@
   "input_confirm_password_tip": "请确认密码",
   "register_failed": "注册失败",
   "register_exception": "注册异常，请重试",
-   "next_step": "下一步",
+  "next_step": "下一步",
   "new_password": "新密码",
   "input_new_password_hint": "请输入新密码",
   "your_account": "您的账号：",
+  "account_empty": "账号不能为空",
+  "password_empty": "密码不能为空",
+  "exit_member_confirm_tip": "退出会员后积分与优惠券将会清空，确认退出会员？",
+  "exit_member_success": "退出会员成功！",
+  "exit_member_format_error": "退出会员失败，响应格式错误",
   "copy": "复制",
   "copied": "已复制",
-  "copy_success": "复制成功"
+  "copy_success": "复制成功",
+  "input_account_hints": "请输入账号",
+  "input_search_hint": "请输入关键词",
+  "settings": "设置",
+  "account_login": "账户及登录",
+  "notification_setting": "通知设置",
+  "payment_management": "支付方式管理",
+  "customer_support": "客户支持",
+  "account_info": "账户信息确认/变更",
+  "third_party_login": "第三方登录",
+  "change_password": "密码更改",
+  "logout": "注销",
+  "exit_member": "退出会员",
+  "avatar": "头像",
+  "account_name": "账号名",
+  "nickname": "昵称",
+  "gender": "性别",
+  "birth_date": "出生日期",
+  "please_login": "请先登录",
+  "load_failed": "加载失败，请稍后重试",
+  "no_collect_items": "暂无收藏商品",
+  "reload": "重新加载",
+  "krw": "韩元",
+  "rmb": "¥",
+  "male": "男",
+  "female": "女",
+  "secret": "保密",
+  "please_fill": "请填写",
+  "password_change": "密码修改",
+  "old_password": "原密码",
+  "input_old_pwd": "请输入原密码",
+  "input_new_pwd": "请输入新密码",
+  "input_confirm_pwd": "请再次输入新密码",
+  "old_pwd_empty": "原密码不能为空",
+  "new_pwd_empty": "新密码不能为空",
+  "pwd_not_match": "两次密码不一致",
+  "pwd_update_success": "密码修改成功",
+  "pwd_update_failed": "密码修改失败",
+  "update": "修改",
+  "select_gender": "选择性别",
+  "select_birthday": "选择出生日期",
+  "gender_updated": "性别已更新",
+  "birthday_updated": "生日已更新",
+  "save_failed": "保存失败",
+  "logout_success": "注销成功",
+  "logout_failed": "注销失败",
+  "edit_nickname": "修改昵称",
+  "enter_nickname": "请输入昵称",
+  "nickname_not_empty": "昵称不能为空",
+  "select_image_source": "选择图片来源",    
+  "image_source_gallery": "相册",         
+  "image_source_camera": "相机",         
+  "image_pick_fail": "图片选择失败，请重试",
+  "image_upload_fail": "图片上传失败：%s", 
+  "image_search_fail": "图片搜索失败：%s",
+  "image_search_success": "找到 %s 个相关商品", 
+  "filter_prefix": "筛选：",              
+  "all_products": "全部商品",             
+  "sort_sales": "销量↑",                  
+  "sort_rating": "星级↑",                
+  "sort_price": "价格↑",                 
+  "no_product_data": "暂无商品数据",      
+  "load_data_fail": "加载失败：%s",
+  "stock":"库存",
+  "Reviews":"评价",
+  "ProductDetails":"宝贝详情",
+  "my_cart": "我的购物车",
+  "direct_buy_product": "直购商品",
+  "recommended_product": "推荐商品",
+  "shopping_cart": "购物车",
+  "favorites": "收藏夹",
+  "cart_empty": "购物车为空",
+  "favorites_empty": "收藏列表为空",
+  "selected_products_info": "选中的商品:${totalTypes}种类 总数量:${totalQuantity}个",
+  "shipping_fee": "配送费: 10,000元",
+  "buy_now": "购买",
+  "delete": "删除",
+  "retry": "重试",
+  "taobao": "淘宝网",
+  "view_on": "上查看",
+  "seller_product_view": "查看卖家·商品",
+  "no_spec_data": "暂无规格数据",
+  "add_cart_success": "加入购物车成功",
+  "buy_now_btn": "直接购买",
+  "add_to_cart_btn": "加入购物车",
+  "no_comments": "暂无评论",
+  "user_id_missing": "用户ID缺失，无法跳转",
+  "product_quality": "宝贝质量",
+  "service_guarantee": "服务保障",
+  "add_to_cart_kr": "加入购物车",
+  "buy_request_kr": "请求购买",
+  "collect_success": "收藏成功",
+  "cancel_collect_success": "取消收藏成功",
+  "select_spec_tip": "请选择商品规格",
+  "product_info_missing": "商品信息缺失，无法加入购物车",
+  "detail_load_fail": "详情加载失败，请重试",
+  "comment_load_fail": "评论加载失败",
+   "product_info_missing_operate": "商品信息缺失，操作失败",
+  "operation_failed": "操作失败：",
+  "product_id_empty": "商品ID为空",
+  "1700_fans": "1700粉丝",
+  "100vip_positive_rate": "100VIP 好评率100%",
+  "notice": "公告",
+  "one_on_one_consultation": "1:1咨询",
+  "address_book_management": "地址簿管理",
+  "write_review_view": "写评论 & 查看",
+  "participate_event_get_coupon": "参与活动领取优惠券",
+  "welcome_user": "%s 欢迎您。",
+  "held_coupons": "持有优惠券",
+  "held_points": "持有积分",
+  "cart_and_collect": "购物车 & 收藏",
+  "points_unit": "P",
+  "confirm_shipping_fee": "配送费用金额确认",
+  "confirm_and_next": "确认及下页",
+  "weight": "重量",
+  "fee": "费用",
+  "back": "返回",
+  "agreed_and_paid": "已同意并完成付款流程",
+  "agree_and_pay": "同意及付款",
+  "expected_shipping_fee": "预期运费",
+  "get_address_list_failed": "获取地址列表失败",
+  "set_as_default_address_success": "已设为默认地址",
+  "set_default_address_failed": "设置默认地址失败",
+  "delete_success": "删除成功",
+  "delete_address_failed": "删除地址失败",
+  "address_copied_to_clipboard": "地址已复制到剪贴板",
+  "add_new_address": "新增地址",
+  "loading": "加载中...",
+  "already_default": "已默认",
+  "set_as_default": "设为默认",
+  "edit": "修改",
+  "get_address_detail_failed": "获取地址详情失败",
+  "school": "学校",
+  "home_address": "家",
+  "input_consignee": "请输入收货人",
+  "input_phone": "请输入手机号",
+  "select_address": "请选择地址",
+  "select_tag": "请选择标签",
+  "add_address_success": "新增地址成功",
+  "update_address_success": "修改地址成功",
+  "add_address_failed": "新增地址失败",
+  "update_address_failed": "修改地址失败",
+  "submit_address_failed": "提交地址失败",
+  "add_address": "新增地址",
+  "update_address": "修改地址",
+  "consignee": "收货人",
+  "please_input": "请输入",
+  "phone_format_example": "010-12345678",
+  "address": "地址",
+  "search_postcode": "搜索邮编",
+  "set_as_default_address": "设置为默认地址",
+  "note_default_address_priority": "注：下单时优先使用该地址",
+  "tag": "标签",
+  "custom": "自定义",
+  "input_tag_max_4_chars": "输入标签（最多4字）",
+  "confirm_add": "确认新增",
+  "confirm_update": "确认修改",
+  "payment_ended": "付款结束",
+  "warehouse_in_ended": "入库结束",
+  "warehouse_out_pending": "出库待发",
+  "shipped_complete": "发货完成",
+  "cancel_order": "取消订单",
+  "unknown_status": "未知状态",
+  "pending_payment": "待支付",
+  "paid": "已支付",
+  "pending_shipment": "待发货",
+  "shipping": "发货中",
+  "warehouse_in": "已入库",
+  "completed": "已完成",
+  "cancelled": "已取消",
+  "order_exception": "订单异常",
+  "load_order_list_failed": "加载订单列表失败",
+  "unknown_error": "未知错误",
+  "load_order_items_failed": "加载订单商品失败",
+  "order_already_cancelled": "订单已取消",
+  "cancel_failed": "取消失败",
+  "network_request_failed": "网络请求失败，请稍后重试",
+  "cancel_order_failed": "取消订单失败，请稍后重试",
+  "network_error_retry": "网络请求失败，请稍后重试",
+  "all_orders": "全部订单",
+  "direct_purchase": "直购",
+  "recommended": "推荐",
+  "no_order_data": "暂无订单数据",
+  "shipping_address": "配送地址",
+  "recipient": "收件人",
+  "no_specification": "无规格",
+  "arrived": "已到货",
+  "store": "xxxx店铺",
+  "pet_store": "xxxx宠物店",
+  "color": "颜色",
+  "quantity": "数量",
+  "shipping_info": "配送信息",
+  "get_address": "调取地址",
+  "personal_customs_code": "个人通关号码",
+  "query_issue": "查询/签发",
+  "postal_code": "邮编",
+  "detail_address": "详细地址",
+  "delivery_notes": "配送邀请事项",
+  "payment_method": "支付方式",
+  "my_points": "我的积分",
+  "coupon": "优惠券",
+  "points": "积分",
+  "use_all": "全额使用",
+  "available_points": "可用积分",
+  "pointss": "个",
+  "total": "全额",
+  "default_address": "默认地址",
+  "confirm_selection": "确认选择",
+  "pay_option_1": "Pay",
+  "pay_option_2": "Toss Pay",
+  "pay_option_3": "N Pay",
+  "payment_method_settings": "支付方式设置",
+  "get_payment_methods_failed": "获取支付方式失败，请稍后重试",
+  "enabled": "开启",
+  "disabled": "关闭",
+  "product": "商品",
+  "select_payment_card": "选择支付卡",
+  "get_payment_cards_failed": "获取支付卡失败",
+  "no_available_payment_cards": "暂无可用支付卡",
+  "select_payment_method": "选择支付方式",
+  "no_available_payment_methods": "暂无可用支付方式",
+  "payment_failed": "支付失败",
+  "please_wait_patiently": "请耐心等待",
+  "check_order_status_for_payment_result": "请查看订单状态确认支付结果",
+  "payment_completed": "支付已完成",
+  "all_orders_kr": "所有订单",
+  "pay_now": "立即支付",
+  "pay_shipping_fee": "支付运费",
+  "apply_after_sales": "申请售后",
+  "announcement": "公告",
+  "announcement_detail": "公告详情",
+  "important": "重要",
+  "normal": "普通",
+  "no_announcements": "暂无公告",
+  "loading_announcements": "加载公告中...",
+  "failed_to_load_announcements": "获取公告失败",
+  "failed_to_load_announcement_detail": "获取公告详情失败",
+  "order_message": "订单消息",
+  "activity_message": "活动消息",
+  "no_activity": "暂无活动",
+  "no_message": "暂无消息",
+  "order_no": "订单号: "
 }
