创建订单退款支付等问题

--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -48,6 +48,7 @@
   "login_exception": "登录异常，请重试",
   "switch_to_account_login": "账号登录",
   "switch_to_email_login": "邮箱登录",
+  "go_to_review": "去评价",
   "verify_code_sent": "验证码已发送，请注意查收",
   "send_code_failed": "验证码发送失败",
   "send_code_exception": "发送验证码异常，请重试",
@@ -269,8 +270,8 @@
   "coupon": "优惠券",
   "points": "积分",
   "use_all": "全额使用",
-  "available_points": "可用积分",
-  "pointss": "个",
+  "available_points": "可用优惠券",
+  "pointss": "张",
   "total": "全额",
   "default_address": "默认地址",
   "confirm_selection": "确认选择",
@@ -307,5 +308,26 @@
   "activity_message": "活动消息",
   "no_activity": "暂无活动",
   "no_message": "暂无消息",
-  "order_no": "订单号: "
+  "order_no": "订单号: ",
+  "refund_applied": "申请退款",
+  "cancel_refund": "取消申请退款",
+  "points_deduction": "积分抵扣",
+  "final_pay": "最终支付",
+  "review_product": "评论商品",
+  "rating": "评分",
+  "review": "评价",
+  "write_your_review": "请输入您的评价",
+  "submit_review": "提交评价",
+  "review_submitted": "评价提交成功",
+  "review_submit_failed": "评价提交失败",
+  "waiting_for_taobao_order": "待淘宝生成订单",
+  "order_info_not_found": "找不到对应订单信息",
+  "meet_points_condition": "满足积分使用条件",
+  "order_amount_requirement": "订单金额需≥%s才能使用积分",
+  "current_price": "当前价格:",
+  "points_deduction_text": "积分抵扣:",
+  "discounted_price": "优惠后价格:",
+  "card_payment": "卡支付",
+  "naver_payment": "Naver支付",
+  "coupon_deduction":"优惠券抵扣:"
 }
