--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -199,6 +199,7 @@
   "set_as_default": "设为默认",
   "edit": "修改",
   "get_address_detail_failed": "获取地址详情失败",
+  "address_not_found": "未找到地址信息",
   "school": "学校",
   "home_address": "家",
   "input_consignee": "请输入收货人",
@@ -254,8 +255,6 @@
   "recipient": "收件人",
   "no_specification": "无规格",
   "arrived": "已到货",
-  "store": "xxxx店铺",
-  "pet_store": "xxxx宠物店",
   "color": "颜色",
   "quantity": "数量",
   "shipping_info": "配送信息",
@@ -275,9 +274,6 @@
   "total": "全额",
   "default_address": "默认地址",
   "confirm_selection": "确认选择",
-  "pay_option_1": "Pay",
-  "pay_option_2": "Toss Pay",
-  "pay_option_3": "N Pay",
   "payment_method_settings": "支付方式设置",
   "get_payment_methods_failed": "获取支付方式失败，请稍后重试",
   "enabled": "开启",
@@ -329,5 +325,62 @@
   "discounted_price": "优惠后价格:",
   "card_payment": "卡支付",
   "naver_payment": "Naver支付",
-  "coupon_deduction":"优惠券抵扣:"
+  "coupon_deduction":"优惠券抵扣:",
+  "activity": "活动",
+  "full_reduction": "满减",
+  "discount_coupon": "折扣券",
+  "claim_now": "立即领取",
+  "already_claimed": "已领取",
+  "failed_to_get_activity_list": "获取活动列表失败",
+  "claim_failed": "领取失败",
+  "claim_failed_try_again": "领取失败，请稍后重试",
+  "cannot_open_link": "无法打开链接",
+  "select_refund_method": "选择退款方式",
+  "return_refund_or_refund": "退货退款 或 退款",
+  "click_to_apply_return_refund_or_refund": "点击后可申请\"退货退款\"或\"退款（未收到货或与商家协商一致）\"",
+  "apply_return_refund": "申请退货退款",
+  "return_refund_description": "已收到货，可申请退货退款。商家收货后为您处理退款，您可放心退货",
+  "apply_refund_no_return": "申请退款（无需退货）",
+  "refund_no_return_description": "未收到货、已拒收快递、与商家协商一致，可申请退款",
+  "current_order_status_not_support_after_sales": "当前订单状态暂不支持申请售后",
+  "please_select_refund_type": "请选择退款类型",
+  "shipping_info_text": "COUZIK捆绑海外代购服务\n订购的订单内所有商品入库后\n会称重所有的商品，计算国际运费。\n\n代理手续费与商品价值结算（1次）后\n国际运费结算（2次）完成后，货物才会出库。\n\n预期运费只是预期，与实际运费有差距",
+  "no_weight_fee_data": "暂无重量相关运费数据",
+  "disclaimer_text": "包含侵权知识产权，不可通关商品、破损危险较高的商品时订单可能会部分或全部取消。\n\n管理者对未认知知识产权商品 通关中发生的扣押/销毁的责任由代理申请人承担。\n\n订购总额超过150美元时，可分多次进行或可能会根据申报金额征收关税。\n\n因报关信息不一致导致的报关滞留 COUZIK不负相关责任",
+  "order_exceeds_max_limit": "订单金额超过最大限额 %s",
+  "catelog_load_failed": "分类加载失败：",
+  "sub_catelog_load_failed": "子分类加载失败：",
+  "no_sub_catelog_data": "暂无子分类数据",
+  "no_activity_data": "暂无活动数据",
+  "total_coupons": "总优惠券",
+  "available_coupons": "待使用",
+  "used_coupons": "已使用",
+  "expired_coupons": "已过期",
+  "use_now": "立即使用",
+  "used": "已使用",
+  "expired": "已过期",
+  "min_amount_to_use": "满",
+  "available": "可用",
+  "only": "仅剩",
+  "no_coupons": "暂无优惠券",
+  "pwd_format_error": "密码只能包含小写字母、数字和特殊符号",
+  "network_error_check": "网络错误，请检查网络",
+  "send_exception_retry": "发送异常，请重试",
+  "verify_exception_retry": "验证异常，请重试",
+  "new_pwd_min_length": "新密码长度不能少于6位",
+  "reset_exception_retry": "重置异常，请重试",
+  "notification_settings": "通知设置",
+  "no_notification_settings": "暂无通知设置项",
+  "fetch_comments_failed": "获取评论失败",
+  "my_comments": "我的评论",
+  "no_comment_data": "暂无评论数据",
+  "reply_content_empty": "回复内容不能为空",
+  "no_spec_info": "无规格信息",
+  "spec_parse_failed": "规格信息解析失败",
+  "unknown_shop": "未知店铺",
+  "no_comment_content": "无评论内容",
+  "unknown_product": "未知商品",
+  "user_id_missing_comments": "用户ID缺失，无法加载评论",
+  "get_user_comments_failed": "获取用户评论失败",
+  "user_no_comments": "该用户暂无评论数据"
 }
