--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,24 +1,392 @@
 {
   "title": "Hello",
-  "my_orders": "My Orders",
-  "go_login": "Go to Login",
   "search": "Search",
-  "price_comparison": "Price Comparison",
-  "collect": "Collect",
+  "collect": "Save",
   "home": "Home",
-  "mine": "Mine",
+  "mine": "My Page",
+  "my_orders": "My Orders",
+  "price_comparison": "Price Comparison",
   "login": "Login",
+  "register": "Register",
+  "go_login": "Go to Login",
   "account": "Account",
   "password": "Password",
+  "email": "Email",
+  "verify_code": "Verification Code",
+  "username": "Username",
+  "name": "Name",
+  "birthday": "Birthday",
+  "phone": "Phone Number",
+  "confirm_password": "Confirm Password",
   "input_account_hint": "Please enter email/account",
   "input_password_hint": "Please enter password",
+  "input_email_hint": "Please enter email",
+  "input_verify_code_hint": "Please enter verification code",
+  "input_username_hint": "Please enter username",
+  "input_phone_hint": "Please enter phone number",
+  "input_confirm_password_hint": "Please re-enter password",
+  "select_birthday_hint": "Please select birthday",
+  "input_account_tip": "Please enter account",
+  "input_password_tip": "Please enter password",
+  "input_email_tip": "Please enter email",
+  "input_verify_code_tip": "Please enter verification code",
+  "email_format_error": "Invalid email format",
+  "send_code": "Send Code",
+  "get_verify_code": "Get Verification Code",
+  "countdown_second": "%s s",
+  "select_birthday_help": "Select Birthday",
+  "cancel": "Cancel",
+  "confirm": "Confirm",
+  "smart_consumer_start": "Start as a smart consumer with half-price direct purchase",
+  "continue_with_kakao": "Continue with KakaoTalk",
+  "continue_with_naver": "Continue with Naver",
+  "login_with_email": "Login with Email",
+  "register_with_email": "Register with Email",
   "email_login": "Email Login",
   "forgot_password": "Forgot Password",
   "forgot_account": "Forgot Account",
+  "login_success": "Login Successful",
   "login_failed": "Login Failed",
-  "network_error": "Network error, please check network",
+  "no_token_tip": "Failed to get login credentials",
+  "network_error": "Network error, please check your connection",
   "login_exception": "Login exception, please try again",
-  "input_account_tip": "Please enter account",
-  "input_password_tip": "Please enter password",
-  "login_success": "Login Success"
+  "switch_to_account_login": "Account Login",
+  "switch_to_email_login": "Email Login",
+  "go_to_review": "Write Review",
+  "verify_code_sent": "Verification code sent, please check your inbox",
+  "send_code_failed": "Failed to send verification code",
+  "send_code_exception": "Exception while sending code, please try again",
+  "countdown_60s": "60s",
+  "input_confirm_password_tip": "Please confirm password",
+  "register_failed": "Registration Failed",
+  "register_exception": "Registration exception, please try again",
+  "next_step": "Next Step",
+  "new_password": "New Password",
+  "input_new_password_hint": "Please enter new password",
+  "your_account": "Your Account: ",
+  "account_empty": "Account cannot be empty",
+  "password_empty": "Password cannot be empty",
+  "exit_member_confirm_tip": "After exiting membership, points and coupons will be cleared. Confirm exit?",
+  "exit_member_success": "Successfully exited membership!",
+  "exit_member_format_error": "Failed to exit membership, invalid response format",
+  "copy": "Copy",
+  "copied": "Copied",
+  "copy_success": "Copy Successful",
+  "input_account_hints": "Please enter account",
+  "input_search_hint": "Please enter keywords",
+  "settings": "Settings",
+  "account_login": "Account & Login",
+  "notification_setting": "Notification Settings",
+  "payment_management": "Payment Method Management",
+  "customer_support": "Customer Support",
+  "account_info": "Account Information Confirmation/Modification",
+  "third_party_login": "Third-Party Login",
+  "change_password": "Change Password",
+  "logout": "Logout",
+  "exit_member": "Exit Membership",
+  "avatar": "Avatar",
+  "account_name": "Account Name",
+  "nickname": "Nickname",
+  "gender": "Gender",
+  "birth_date": "Date of Birth",
+  "please_login": "Please login first",
+  "load_failed": "Load failed, please try again later",
+  "no_collect_items": "No saved products",
+  "reload": "Reload",
+  "krw": "KRW",
+  "rmb": "¥",
+  "male": "Male",
+  "female": "Female",
+  "secret": "Secret",
+  "please_fill": "Please fill in",
+  "password_change": "Password Change",
+  "old_password": "Old Password",
+  "input_old_pwd": "Please enter old password",
+  "input_new_pwd": "Please enter new password",
+  "input_confirm_pwd": "Please re-enter new password",
+  "old_pwd_empty": "Old password cannot be empty",
+  "new_pwd_empty": "New password cannot be empty",
+  "pwd_not_match": "Passwords do not match",
+  "pwd_update_success": "Password updated successfully",
+  "pwd_update_failed": "Failed to update password",
+  "update": "Update",
+  "select_gender": "Select Gender",
+  "select_birthday": "Select Date of Birth",
+  "gender_updated": "Gender updated",
+  "birthday_updated": "Birthday updated",
+  "save_failed": "Save failed",
+  "logout_success": "Logout Successful",
+  "logout_failed": "Logout Failed",
+  "edit_nickname": "Edit Nickname",
+  "enter_nickname": "Please enter nickname",
+  "nickname_not_empty": "Nickname cannot be empty",
+  "select_image_source": "Select Image Source",
+  "image_source_gallery": "Gallery",
+  "image_source_camera": "Camera",
+  "image_pick_fail": "Failed to select image, please try again",
+  "image_upload_fail": "Image upload failed: %s",
+  "image_search_fail": "Image search failed: %s",
+  "image_search_success": "Found %s related products",
+  "filter_prefix": "Filter: ",
+  "all_products": "All Products",
+  "sort_sales": "Sales ↑",
+  "sort_rating": "Rating ↑",
+  "sort_price": "Price ↑",
+  "no_product_data": "No product data available",
+  "load_data_fail": "Load failed: %s",
+  "stock": "Stock",
+  "Reviews": "Reviews",
+  "ProductDetails": "Product Details",
+  "my_cart": "My Cart",
+  "direct_buy_product": "Direct Purchase Products",
+  "recommended_product": "Recommended Products",
+  "shopping_cart": "Shopping Cart",
+  "favorites": "Favorites",
+  "cart_empty": "Shopping cart is empty",
+  "favorites_empty": "Favorites list is empty",
+  "selected_products_info": "Selected Products: ${totalTypes} Types | Total Quantity: ${totalQuantity}",
+  "shipping_fee": "Shipping Fee: 10,000 KRW",
+  "buy_now": "Buy Now",
+  "delete": "Delete",
+  "retry": "Retry",
+  "taobao": "Taobao",
+  "view_on": "View on",
+  "seller_product_view": "View Seller & Product",
+  "no_spec_data": "No specification data",
+  "add_cart_success": "Added to cart successfully",
+  "buy_now_btn": "Buy Now",
+  "add_to_cart_btn": "Add to Cart",
+  "no_comments": "No reviews available",
+  "user_id_missing": "User ID missing, cannot redirect",
+  "product_quality": "Product Quality",
+  "service_guarantee": "Service Guarantee",
+  "add_to_cart_kr": "Add to Cart",
+  "buy_request_kr": "Request Purchase",
+  "collect_success": "Saved Successfully",
+  "cancel_collect_success": "Removed from Favorites Successfully",
+  "select_spec_tip": "Please select product specifications",
+  "product_info_missing": "Product information missing, cannot add to cart",
+  "detail_load_fail": "Failed to load details, please try again",
+  "comment_load_fail": "Failed to load reviews",
+  "product_info_missing_operate": "Product information missing, operation failed",
+  "operation_failed": "Operation failed: ",
+  "product_id_empty": "Product ID is empty",
+  "1700_fans": "1,700 Fans",
+  "100vip_positive_rate": "100 VIP | 100% Positive Rating",
+  "notice": "Notice",
+  "one_on_one_consultation": "1:1 Consultation",
+  "address_book_management": "Address Book Management",
+  "write_review_view": "Write & View Reviews",
+  "participate_event_get_coupon": "Join events to get coupons",
+  "welcome_user": "Welcome, %s.",
+  "held_coupons": "Held Coupons",
+  "held_points": "Held Points",
+  "cart_and_collect": "Cart & Favorites",
+  "points_unit": "P",
+  "confirm_shipping_fee": "Shipping Fee Confirmation",
+  "confirm_and_next": "Confirm & Continue",
+  "weight": "Weight",
+  "fee": "Fee",
+  "back": "Back",
+  "agreed_and_paid": "Agreed & Payment Completed",
+  "agree_and_pay": "Agree & Pay",
+  "expected_shipping_fee": "Estimated Shipping Fee",
+  "get_address_list_failed": "Failed to get address list",
+  "set_as_default_address_success": "Set as default address successfully",
+  "set_default_address_failed": "Failed to set default address",
+  "delete_success": "Deletion Successful",
+  "delete_address_failed": "Failed to delete address",
+  "address_copied_to_clipboard": "Address copied to clipboard",
+  "add_new_address": "Add New Address",
+  "loading": "Loading...",
+  "already_default": "Already Default",
+  "set_as_default": "Set as Default",
+  "edit": "Edit",
+  "get_address_detail_failed": "Failed to get address details",
+  "address_not_found": "Address not found",
+  "school": "School",
+  "home_address": "Home",
+  "input_consignee": "Please enter recipient name",
+  "input_phone": "Please enter phone number",
+  "select_address": "Please select address",
+  "select_tag": "Please select tag",
+  "add_address_success": "Address added successfully",
+  "update_address_success": "Address updated successfully",
+  "add_address_failed": "Failed to add address",
+  "update_address_failed": "Failed to update address",
+  "submit_address_failed": "Failed to submit address",
+  "add_address": "Add Address",
+  "update_address": "Update Address",
+  "consignee": "Recipient",
+  "please_input": "Please enter",
+  "phone_format_example": "010-12345678",
+  "address": "Address",
+  "search_postcode": "Search Postcode",
+  "set_as_default_address": "Set as Default Address",
+  "note_default_address_priority": "Note: This address will be prioritized for orders",
+  "tag": "Tag",
+  "custom": "Custom",
+  "input_tag_max_4_chars": "Enter tag (max 4 characters)",
+  "confirm_add": "Confirm Addition",
+  "confirm_update": "Confirm Update",
+  "payment_ended": "Payment Completed",
+  "warehouse_in_ended": "Warehousing Completed",
+  "warehouse_out_pending": "Pending Shipment",
+  "shipped_complete": "Shipped Successfully",
+  "cancel_order": "Cancel Order",
+  "unknown_status": "Unknown Status",
+  "pending_payment": "Pending Payment",
+  "paid": "Paid",
+  "pending_shipment": "Pending Shipment",
+  "shipping": "In Transit",
+  "warehouse_in": "Warehoused",
+  "completed": "Completed",
+  "cancelled": "Cancelled",
+  "order_exception": "Order Exception",
+  "load_order_list_failed": "Failed to load order list",
+  "unknown_error": "Unknown Error",
+  "load_order_items_failed": "Failed to load order items",
+  "order_already_cancelled": "Order already cancelled",
+  "cancel_failed": "Cancellation Failed",
+  "network_request_failed": "Network request failed, please try again later",
+  "cancel_order_failed": "Failed to cancel order, please try again later",
+  "network_error_retry": "Network request failed, please try again later",
+  "all_orders": "All Orders",
+  "direct_purchase": "Direct Purchase",
+  "recommended": "Recommended",
+  "no_order_data": "No order data available",
+  "shipping_address": "Shipping Address",
+  "recipient": "Recipient",
+  "no_specification": "No Specifications",
+  "arrived": "Arrived",
+  "color": "Color",
+  "quantity": "Quantity",
+  "shipping_info": "Shipping Information",
+  "get_address": "Retrieve Address",
+  "personal_customs_code": "Personal Customs Clearance Number",
+  "query_issue": "Inquire/Issue",
+  "postal_code": "Postal Code",
+  "detail_address": "Detailed Address",
+  "delivery_notes": "Delivery Instructions",
+  "payment_method": "Payment Method",
+  "my_points": "My Points",
+  "coupon": "Coupon",
+  "points": "Points",
+  "use_all": "Use All",
+  "available_points": "Available Coupons",
+  "pointss": "pcs",
+  "total": "Total Amount",
+  "default_address": "Default Address",
+  "confirm_selection": "Confirm Selection",
+  "payment_method_settings": "Payment Method Settings",
+  "get_payment_methods_failed": "Failed to get payment methods, please try again later",
+  "enabled": "Enabled",
+  "disabled": "Disabled",
+  "product": "Product",
+  "select_payment_card": "Select Payment Card",
+  "get_payment_cards_failed": "Failed to get payment cards",
+  "no_available_payment_cards": "No available payment cards",
+  "select_payment_method": "Select Payment Method",
+  "no_available_payment_methods": "No available payment methods",
+  "payment_failed": "Payment Failed",
+  "please_wait_patiently": "Please wait patiently",
+  "check_order_status_for_payment_result": "Check order status to confirm payment result",
+  "payment_completed": "Payment Completed",
+  "all_orders_kr": "All Orders",
+  "pay_now": "Pay Now",
+  "pay_shipping_fee": "Pay Shipping Fee",
+  "apply_after_sales": "Apply for After-Sales Service",
+  "announcement": "Announcement",
+  "announcement_detail": "Announcement Details",
+  "important": "Important",
+  "normal": "Normal",
+  "no_announcements": "No announcements available",
+  "loading_announcements": "Loading announcements...",
+  "failed_to_load_announcements": "Failed to get announcements",
+  "failed_to_load_announcement_detail": "Failed to get announcement details",
+  "order_message": "Order Messages",
+  "activity_message": "Activity Messages",
+  "no_activity": "No activities available",
+  "no_message": "No messages available",
+  "order_no": "Order No: ",
+  "refund_applied": "Refund Applied",
+  "cancel_refund": "Cancel Refund Application",
+  "points_deduction": "Points Deduction",
+  "final_pay": "Final Payment",
+  "review_product": "Review Product",
+  "rating": "Rating",
+  "review": "Review",
+  "write_your_review": "Please enter your review",
+  "submit_review": "Submit Review",
+  "review_submitted": "Review submitted successfully",
+  "review_submit_failed": "Failed to submit review",
+  "waiting_for_taobao_order": "Waiting for Taobao order generation",
+  "order_info_not_found": "Order information not found",
+  "meet_points_condition": "Meets points usage conditions",
+  "order_amount_requirement": "Order amount must be ≥ %s to use points",
+  "current_price": "Current Price: ",
+  "points_deduction_text": "Points Deduction: ",
+  "discounted_price": "Discounted Price: ",
+  "card_payment": "Card Payment",
+  "naver_payment": "Naver Pay",
+  "coupon_deduction": "Coupon Deduction: ",
+  "activity": "Activity",
+  "full_reduction": "Spend & Save",
+  "discount_coupon": "Discount Coupon",
+  "claim_now": "Claim Now",
+  "already_claimed": "Already Claimed",
+  "failed_to_get_activity_list": "Failed to get activity list",
+  "claim_failed": "Claim Failed",
+  "claim_failed_try_again": "Claim failed, please try again later",
+  "cannot_open_link": "Cannot open link",
+  "select_refund_method": "Select Refund Method",
+  "return_refund_or_refund": "Return & Refund or Refund Only",
+  "click_to_apply_return_refund_or_refund": "Click to apply \"Return & Refund\" or \"Refund Only (not received goods or agreed with seller)\"",
+  "apply_return_refund": "Apply for Return & Refund",
+  "return_refund_description": "If you have received the goods, you can apply for return and refund. The seller will process the refund after receiving the returned goods, so you can return with confidence",
+  "apply_refund_no_return": "Apply for Refund Only (No Return Required)",
+  "refund_no_return_description": "You can apply for refund if you haven't received the goods, rejected the delivery, or reached an agreement with the seller",
+  "current_order_status_not_support_after_sales": "Current order status does not support after-sales service application",
+  "please_select_refund_type": "Please select refund type",
+  "shipping_info_text": "COUZIK bundled overseas purchasing service\nAfter all products in the order are warehoused,\nwe will weigh all products and calculate the international shipping fee.\n\nAfter the settlement of agency service fee and product value (1st payment),\nand the settlement of international shipping fee (2nd payment),\nthe goods will be shipped out.\n\nThe estimated shipping fee is for reference only and may differ from the actual fee",
+  "no_weight_fee_data": "No weight-related shipping fee data available",
+  "disclaimer_text": "Orders may be partially or fully cancelled if they contain infringing intellectual property items, non-clearable goods, or goods with high risk of damage.\n\nThe agent applicant shall be liable for the seizure/destruction of unrecognized intellectual property goods during customs clearance.\n\nIf the total order amount exceeds 150 USD, you can split the order into multiple times or customs duties may be levied according to the declared amount.\n\nCOUZIK shall not be liable for customs clearance delays caused by inconsistent customs declaration information",
+  "order_exceeds_max_limit": "Order amount exceeds the maximum limit",
+  "catelog_load_failed": "Failed to load catalog: ",
+  "sub_catelog_load_failed": "Failed to load sub-catalog: ",
+  "no_sub_catelog_data": "No sub-catalog data available",
+  "no_activity_data": "No activity data available",
+  "total_coupons": "Total Coupons",
+  "available_coupons": "Available",
+  "used_coupons": "Used",
+  "expired_coupons": "Expired",
+  "use_now": "Use Now",
+  "used": "Used",
+  "expired": "Expired",
+  "min_amount_to_use": "Min. Spend ",
+  "available": "Available",
+  "only": "Only",
+  "no_coupons": "No coupons available",
+  "pwd_format_error": "Password can only contain lowercase letters, numbers and special characters",
+  "network_error_check": "Network error, please check your network connection",
+  "send_exception_retry": "Sending exception, please try again",
+  "verify_exception_retry": "Verification exception, please try again",
+  "new_pwd_min_length": "New password must be at least 6 characters long",
+  "reset_exception_retry": "Reset exception, please try again",
+  "notification_settings": "Notification Settings",
+  "no_notification_settings": "No notification settings available",
+  "fetch_comments_failed": "Failed to fetch comments",
+  "my_comments": "My Comments",
+  "no_comment_data": "No comment data available",
+  "reply_content_empty": "Reply content cannot be empty",
+  "no_spec_info": "No specification information available",
+  "spec_parse_failed": "Failed to parse specification information",
+  "unknown_shop": "Unknown Shop",
+  "no_comment_content": "No comment content",
+  "unknown_product": "Unknown Product",
+  "user_id_missing_comments": "User ID missing, cannot load comments",
+  "get_user_comments_failed": "Failed to get user comments",
+  "user_no_comments": "This user has no comment data yet",
+  "no_price": "No price available",
+  "quantity_cannot_less_1": "Quantity cannot be less than 1"
 }
