提示消息样式居中，还有登录页文字修改的问题

--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -40,8 +40,8 @@
   "smart_consumer_start": "半价直购的智能消费者的开始",
   "continue_with_kakao": "继续使用KakaoTalk",
   "continue_with_naver": "继续使用Naver",
-  "login_with_email": "用邮箱登录",
-  "register_with_email": "用邮箱注册",
+  "login_with_email": "账号登录",
+  "register_with_email": "账号注册",
   "email_login": "邮箱登录",
   "forgot_password": "忘记密码",
   "forgot_account": "忘记账号",
