--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -1,7 +1,7 @@
 {
   "title": "你好",
   "search": "搜索",
-  "collect": "收藏",
+  "collect": "推荐商品",
   "home": "首页",
   "mine": "我的",
   "my_orders": "我的订单",
