优惠卷部分文字没有国际化的问题

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -333,6 +333,16 @@
   "activity": "Activity",
   "full_reduction": "Spend & Save",
   "discount_coupon": "Discount Coupon",
+  "discount": "% off",
+  "reduction": "off",
+  "yuan": "yuan",
+  "discount_at": "at",
+  "login_tip": "Login Tips",
+  "not_logged_in": "Not logged in, please login first",
+  "day": "d",
+  "hour": "h",
+  "minute": "m",
+  "second": "s",
   "claim_now": "Claim Now",
   "already_claimed": "Claimed",
   "failed_to_get_activity_list": "Failed to get activities",
