--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -334,6 +334,16 @@
   "activity": "이벤트/활동",
   "full_reduction": "금액별 할인",
   "discount_coupon": "할인 쿠폰",
+  "discount": "할인",
+  "reduction": "할인",
+  "yuan": "원",
+  "discount_at": "할인",
+  "login_tip": "로그인 팁",
+  "not_logged_in": "로그인하지 않았습니다. 먼저 로그인하세요",
+  "day": "일",
+  "hour": "시",
+  "minute": "분",
+  "second": "초",
   "claim_now": "지금 받기",
   "already_claimed": "이미 받음",
   "failed_to_get_activity_list": "활동 목록을 불러오지 못했습니다",
