--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -333,6 +333,16 @@
   "activity": "活动",
   "full_reduction": "满减",
   "discount_coupon": "折扣券",
+  "discount": "折",
+  "reduction": "减",
+  "yuan": "元",
+  "discount_at": "打",
+  "login_tip": "登录提示",
+  "not_logged_in": "未登录，请先登录",
+  "day": "天",
+  "hour": "时",
+  "minute": "分",
+  "second": "秒",
   "claim_now": "立即领取",
   "already_claimed": "已领取",
   "failed_to_get_activity_list": "获取活动列表失败",
