--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -399,5 +399,7 @@
   "get_user_comments_failed": "사용자 리뷰 조회 실패",
   "user_no_comments": "이 사용자의 리뷰가 없습니다",
   "no_price": "가격 없음",
-  "quantity_cannot_less_1": "수량은 1 이상이어야 합니다"
+  "quantity_cannot_less_1": "수량은 1 이상이어야 합니다",
+  "out_of_stock": "품절",
+  "reached_max_quantity": "최대 구매 수량 도달"
 }
