顶部栏通知和设置返回后改成返回到首页

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -76,6 +76,7 @@
   "input_search_hint": "Enter keywords",
   "settings": "Settings",
   "account_login": "Account & Login",
+  "notification": "Notifications",
   "notification_setting": "Notifications",
   "payment_management": "Payment Methods",
   "customer_support": "Support",
