--- a/i18n/ko.json
+++ b/i18n/ko.json
@@ -77,6 +77,7 @@
   "input_search_hint": "검색어를 입력하세요",
   "settings": "설정",
   "account_login": "계정 및 로그인",
+  "notification": "알림",
   "notification_setting": "알림 설정",
   "payment_management": "결제 수단 관리",
   "customer_support": "고객 지원",
