--- a/i18n/zh.json
+++ b/i18n/zh.json
@@ -76,6 +76,7 @@
   "input_search_hint": "请输入关键词",
   "settings": "设置",
   "account_login": "账户及登录",
+  "notification": "通知",
   "notification_setting": "通知设置",
   "payment_management": "支付方式管理",
   "customer_support": "客户支持",
