修改新增的国际化文字，提示toast适配字体大小

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -146,6 +146,7 @@
   "cart_empty": "Cart is empty",
   "favorites_empty": "Favorites is empty",
   "selected_products_info": "Selected: ${totalTypes} Types | Qty: ${totalQuantity}",
+  "share_link_copied": "Share link copied to clipboard",
   "shipping_fee": "Shipping: 10,000 KRW",
   "buy_now": "Buy Now",
   "delete": "Delete",
